--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,50 @@
     font-family: 'Open Sans', sans-serif;
   }
 }
+
+.blog-body h1 {
+  @apply font-bold mt-4; /* or any other Tailwind CSS utility */
+}
+
+.blog-body h2 {
+  @apply font-medium mt-4; /* or any other Tailwind CSS utility */
+}
+
+.blog-body strong {
+  @apply font-semibold; /* or any other Tailwind CSS utility */
+}
+
+.blog-body p {
+  @apply font-normal text-base md:text-xl lg:text-2xl text-slate-800 dark:text-gray-100; /* or any other Tailwind CSS utility */
+}
+
+@layer components {
+  .write-blogs-react-select-container .write-blogs-react-select__control {
+    @apply bg-transparent border-2 border-neutral-300 dark:border-neutral-700 hover:border-neutral-400 dark:hover:border-neutral-500 mt-8 rounded-full;
+  }
+
+  .write-blogs-react-select-container
+    .write-blogs-react-select__control--is-focused {
+    @apply border-neutral-500 hover:border-neutral-500 dark:border-neutral-400 dark:hover:border-neutral-400 shadow-none;
+  }
+
+  /* dropdown menu */
+  .write-blogs-react-select-container .write-blogs-react-select__menu {
+    @apply bg-gray-100 dark:bg-slate-500 border-2 border-neutral-300 dark:border-neutral-600;
+  }
+
+  .write-blogs-react-select-container .write-blogs-react-select__option {
+    @apply text-slate-900 dark:text-white bg-transparent hover:bg-neutral-200 dark:hover:bg-dark-background;
+  }
+
+  .write-blogs-react-select-container .write-blogs-react-select__multi-value {
+    @apply bg-gray-200 dark:bg-emerald-600 rounded-lg text-lg font-semibold;
+  }
+
+  .write-blogs-react-select-container
+    .write-blogs-react-select__input-container,
+  .write-blogs-react-select-container .write-blogs-react-select__placeholder,
+  .write-blogs-react-select-container .write-blogs-react-select__single-value {
+    @apply text-neutral-600 dark:text-neutral-200;
+  }
+}
